version 1.2 (tested on Android Platform 1.5, 1.6, 2.1 and 2.2)
git-svn-id: https://jade.tilab.com/svn/jade_add-ons/trunk@1782 815794fe-97f2-0310-9206-e62f04a60ddc